--- a/views/base.pug
+++ b/views/base.pug
@@ -8,14 +8,15 @@ html
         link(rel='shortcut icon' type='image/png' href='img/favicon.png')
         link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
 
-        title Natours | Exciting tours for adventurous people
+        title Natours | #{title}
+        
     body
         // Header
         include partials/_header
 
         // Content
-        section.overview
-            h1 #{tour}
+        block content
+            h1 Block Content Placeholder
         
         // Footer
         include partials/_footer
