--- a/views/overview.pug
+++ b/views/overview.pug
@@ -1,4 +1,47 @@
 extends base
 
 block content
-    h1 Tour Overview
+    main.main
+        div.card-container
+
+            //- Looping through tours array
+            each tour in tours
+                div.card
+                    div.card__header
+                        div.card__picture
+                            div.card__picture-overlay &nbsp;
+                            img.card__picture-img(src=`/img/tours/${tour.imageCover}` alt=`${tour.name}`)
+                        
+                        h3.heading-tertirary
+                            span #{tour.name}
+                    
+                    div.card__details
+                        h4.card__sub-heading #{tour.difficulty} #{tour.duration}-day tour
+                        p.card__text #{tour.summary}
+                        div.card__data
+                            svg.card__icon
+                                use(xlink:href='/img/icons.svg#icon-map-pin')
+                            span #{tour.startLocation.description}
+                        div.card__data
+                            svg.card__icon
+                                use(xlink:href='/img/icons.svg#icon-calendar')
+                            span #{tour.startDates[0].toLocaleString('en-us', {month: 'long', year: 'numeric'})}
+                        div.card__data
+                            svg.card__icon
+                                use(xlink:href='/img/icons.svg#icon-flag')
+                            span #{tour.locations.length} stops
+                        div.card__data
+                            svg.card__icon
+                                use(xlink:href='/img/icons.svg#icon-user')
+                            span #{tour.maxGroupSize} people
+                        
+                    div.card__footer
+                        p
+                            span.card__footer-value $#{tour.price}
+                            | 
+                            span.card__footer-text per person
+                        p.card__ratings
+                            span.card__footer-value #{tour.ratingsAverage}
+                            | 
+                            span.card__footer-text rating (#{tour.ratingsQuantity})
+                        a.btn.btn--green.btn--small(href=`/tour/${tour.slug}`) Details
