--- a/views/partials/_header.pug
+++ b/views/partials/_header.pug
@@ -1,9 +1,9 @@
 // Header
 header.header
     nav.nav.nav--tours
-        a.nav_el(href='#') All tours
+        a.nav__el(href='/') All tours
     div.header__logo
-        img(src='img/logo-white.png' alt='Natours Logo')
+        img(src='/img/logo-white.png' alt='Natours Logo')
     div.nav.nav--user
         //- a.nav-el(href='#') My Bookings
         //- a.nav-el(href='#')
