--- a/views/base.pug
+++ b/views/base.pug
@@ -22,4 +22,6 @@ html
         // Footer
         include partials/_footer
 
+        script(src='/js/login.js')
         script(src='/js/mapbox.js')
+        script(src='https://unpkg.com/axios/dist/axios.min.js')
