--- a/views/base.pug
+++ b/views/base.pug
@@ -21,7 +21,5 @@ html
         
         // Footer
         include partials/_footer
-
-        script(src='/js/login.js')
-        script(src='/js/mapbox.js')
-        script(src='https://unpkg.com/axios/dist/axios.min.js')
+    
+        script(src='/js/bundle.js')
