Implement stripe for payment processing. Create booking model. | Update #44 |

--- a/views/base.pug
+++ b/views/base.pug
@@ -22,4 +22,5 @@ html
         // Footer
         include partials/_footer
     
+        script(src='https://js.stripe.com/v3/')
         script(src='/js/bundle.js')
