Implement bookings API and front-end. | Update #45 |

--- a/views/account.pug
+++ b/views/account.pug
@@ -14,7 +14,7 @@ block content
             nav.user-view__menu
                 ul.side-nav
                     +navItem('#', 'settings', 'Settings', true)
-                    +navItem('#', 'briefcase', 'My Bookings')
+                    +navItem('/my-tours', 'briefcase', 'My Bookings')
                     +navItem('#', 'star', 'My Reviews')
                     +navItem('#', 'credit-card', 'Billing')
 
